crates/java-syntax/tests/snapshots/parser_snapshots__parse_import_static_star.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
import static java.util.Collections.*;
TOKENS:
IMPORT_KW "import"
WHITESPACE " "
STATIC_KW "static"
WHITESPACE " "
IDENTIFIER "java"
DOT "."
IDENTIFIER "util"
DOT "."
IDENTIFIER "Collections"
DOT "."
STAR "*"
SEMICOLON ";"

LEX_ERRORS:
<none>

EVENTS:
StartNode(ROOT, forward_parent=None)
StartNode(IMPORT_DECL, forward_parent=None)
AddToken
AddToken
StartNode(IMPORT_PATH, forward_parent=None)
AddToken
AddToken
AddToken
AddToken
AddToken
AddToken
AddToken
FinishNode
AddToken
FinishNode
FinishNode

PARSE_ERRORS:
<none>
