crates/java-syntax/tests/snapshots/parser_snapshots__parse_interface_with_default_method.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
interface A { default void f() {} }
TOKENS:
INTERFACE_KW "interface"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
DEFAULT_KW "default"
WHITESPACE " "
VOID_KW "void"
WHITESPACE " "
IDENTIFIER "f"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
WHITESPACE " "
R_BRACE "}"

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT
  INTERFACE_DECL
    MODIFIER_LIST
    INTERFACE_KW "interface"
    WHITESPACE " "
    IDENTIFIER "A"
    INTERFACE_BODY
      WHITESPACE " "
      L_BRACE "{"
      METHOD_DECL
        MODIFIER_LIST
          WHITESPACE " "
          DEFAULT_KW "default"
        WHITESPACE " "
        VOID_KW "void"
        WHITESPACE " "
        IDENTIFIER "f"
        FORMAL_PARAMETERS
          L_PAREN "("
          R_PAREN ")"
        BLOCK
          WHITESPACE " "
          L_BRACE "{"
          R_BRACE "}"
      WHITESPACE " "
      R_BRACE "}"
