crates/java-syntax/tests/snapshots/parser_snapshots__parse_interface_with_type_parameters.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
public interface A<T, U> {}
TOKENS:
PUBLIC_KW "public"
WHITESPACE " "
INTERFACE_KW "interface"
WHITESPACE " "
IDENTIFIER "A"
LESS "<"
IDENTIFIER "T"
COMMA ","
WHITESPACE " "
IDENTIFIER "U"
GREATER ">"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT
  INTERFACE_DECL
    MODIFIER_LIST
      PUBLIC_KW "public"
    WHITESPACE " "
    INTERFACE_KW "interface"
    WHITESPACE " "
    IDENTIFIER "A"
    TYPE_PARAMETERS
      LESS "<"
      TYPE_PARAMETER
        IDENTIFIER "T"
      COMMA ","
      TYPE_PARAMETER
        WHITESPACE " "
        IDENTIFIER "U"
      GREATER ">"
    INTERFACE_BODY
      WHITESPACE " "
      L_BRACE "{"
      R_BRACE "}"
