crates/java-syntax/tests/snapshots/parser_snapshots__parse_method_return_type_with_arguments.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class A { List<String> f() {} }
TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
IDENTIFIER "List"
LESS "<"
IDENTIFIER "String"
GREATER ">"
WHITESPACE " "
IDENTIFIER "f"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
WHITESPACE " "
R_BRACE "}"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..31
  CLASS_DECL@0..31
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..7 "A"
    CLASS_BODY@7..31
      WHITESPACE@7..8 " "
      L_BRACE@8..9 "{"
      METHOD_DECL@9..29
        WHITESPACE@9..10 " "
        TYPE@10..22
          QUALIFIED_NAME@10..14
            IDENTIFIER@10..14 "List"
          TYPE_ARGUMENTS@14..22
            LESS@14..15 "<"
            TYPE_ARGUMENT@15..21
              TYPE@15..21
                QUALIFIED_NAME@15..21
                  IDENTIFIER@15..21 "String"
            GREATER@21..22 ">"
        WHITESPACE@22..23 " "
        IDENTIFIER@23..24 "f"
        FORMAL_PARAMETERS@24..26
          L_PAREN@24..25 "("
          R_PAREN@25..26 ")"
        BLOCK@26..29
          WHITESPACE@26..27 " "
          L_BRACE@27..28 "{"
          R_BRACE@28..29 "}"
      WHITESPACE@29..30 " "
      R_BRACE@30..31 "}"
