crates/java-syntax/tests/snapshots/parser_snapshots__parse_mixed_array_dimensions.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class A { int[] a, b[]; }
TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
INT_KW "int"
L_BRACKET "["
R_BRACKET "]"
WHITESPACE " "
IDENTIFIER "a"
COMMA ","
WHITESPACE " "
IDENTIFIER "b"
L_BRACKET "["
R_BRACKET "]"
SEMICOLON ";"
WHITESPACE " "
R_BRACE "}"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..25
  CLASS_DECL@0..25
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..7 "A"
    CLASS_BODY@7..25
      WHITESPACE@7..8 " "
      L_BRACE@8..9 "{"
      FIELD_DECL@9..23
        WHITESPACE@9..10 " "
        TYPE@10..15
          INT_KW@10..13 "int"
          DIMENSIONS@13..15
            DIMENSION@13..15
              L_BRACKET@13..14 "["
              R_BRACKET@14..15 "]"
        VARIABLE_DECLARATOR_LIST@15..22
          WHITESPACE@15..16 " "
          VARIABLE_DECLARATOR@16..17
            IDENTIFIER@16..17 "a"
          COMMA@17..18 ","
          VARIABLE_DECLARATOR@18..22
            WHITESPACE@18..19 " "
            IDENTIFIER@19..20 "b"
            DIMENSIONS@20..22
              DIMENSION@20..22
                L_BRACKET@20..21 "["
                R_BRACKET@21..22 "]"
        SEMICOLON@22..23 ";"
      WHITESPACE@23..24 " "
      R_BRACE@24..25 "}"
