crates/java-syntax/tests/snapshots/parser_snapshots__parse_module_decl.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
module com.example.foo {
    requires com.example.foo.http;
    requires java.logging;

    requires transitive com.example.foo.network;

    exports com.example.foo.bar;
    exports com.example.foo.internal to com.example.foo.probe;

    opens com.example.foo.quux;
    opens com.example.foo.internal to com.example.foo.network,
                                      com.example.foo.probe;

    uses com.example.foo.spi.Intf;
    provides com.example.foo.spi.Intf with com.example.foo.Impl;
}

TOKENS:
IDENTIFIER "module"
WHITESPACE " "
IDENTIFIER "com"
DOT "."
IDENTIFIER "example"
DOT "."
IDENTIFIER "foo"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n    "
IDENTIFIER "requires"
WHITESPACE " "
IDENTIFIER "com"
DOT "."
IDENTIFIER "example"
DOT "."
IDENTIFIER "foo"
DOT "."
IDENTIFIER "http"
SEMICOLON ";"
WHITESPACE "\n    "
IDENTIFIER "requires"
WHITESPACE " "
IDENTIFIER "java"
DOT "."
IDENTIFIER "logging"
SEMICOLON ";"
WHITESPACE "\n\n    "
IDENTIFIER "requires"
WHITESPACE " "
IDENTIFIER "transitive"
WHITESPACE " "
IDENTIFIER "com"
DOT "."
IDENTIFIER "example"
DOT "."
IDENTIFIER "foo"
DOT "."
IDENTIFIER "network"
SEMICOLON ";"
WHITESPACE "\n\n    "
IDENTIFIER "exports"
WHITESPACE " "
IDENTIFIER "com"
DOT "."
IDENTIFIER "example"
DOT "."
IDENTIFIER "foo"
DOT "."
IDENTIFIER "bar"
SEMICOLON ";"
WHITESPACE "\n    "
IDENTIFIER "exports"
WHITESPACE " "
IDENTIFIER "com"
DOT "."
IDENTIFIER "example"
DOT "."
IDENTIFIER "foo"
DOT "."
IDENTIFIER "internal"
WHITESPACE " "
IDENTIFIER "to"
WHITESPACE " "
IDENTIFIER "com"
DOT "."
IDENTIFIER "example"
DOT "."
IDENTIFIER "foo"
DOT "."
IDENTIFIER "probe"
SEMICOLON ";"
WHITESPACE "\n\n    "
IDENTIFIER "opens"
WHITESPACE " "
IDENTIFIER "com"
DOT "."
IDENTIFIER "example"
DOT "."
IDENTIFIER "foo"
DOT "."
IDENTIFIER "quux"
SEMICOLON ";"
WHITESPACE "\n    "
IDENTIFIER "opens"
WHITESPACE " "
IDENTIFIER "com"
DOT "."
IDENTIFIER "example"
DOT "."
IDENTIFIER "foo"
DOT "."
IDENTIFIER "internal"
WHITESPACE " "
IDENTIFIER "to"
WHITESPACE " "
IDENTIFIER "com"
DOT "."
IDENTIFIER "example"
DOT "."
IDENTIFIER "foo"
DOT "."
IDENTIFIER "network"
COMMA ","
WHITESPACE "\n                                      "
IDENTIFIER "com"
DOT "."
IDENTIFIER "example"
DOT "."
IDENTIFIER "foo"
DOT "."
IDENTIFIER "probe"
SEMICOLON ";"
WHITESPACE "\n\n    "
IDENTIFIER "uses"
WHITESPACE " "
IDENTIFIER "com"
DOT "."
IDENTIFIER "example"
DOT "."
IDENTIFIER "foo"
DOT "."
IDENTIFIER "spi"
DOT "."
IDENTIFIER "Intf"
SEMICOLON ";"
WHITESPACE "\n    "
IDENTIFIER "provides"
WHITESPACE " "
IDENTIFIER "com"
DOT "."
IDENTIFIER "example"
DOT "."
IDENTIFIER "foo"
DOT "."
IDENTIFIER "spi"
DOT "."
IDENTIFIER "Intf"
WHITESPACE " "
IDENTIFIER "with"
WHITESPACE " "
IDENTIFIER "com"
DOT "."
IDENTIFIER "example"
DOT "."
IDENTIFIER "foo"
DOT "."
IDENTIFIER "Impl"
SEMICOLON ";"
WHITESPACE "\n"
R_BRACE "}"
WHITESPACE "\n"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..494
  MODULE_DECL@0..493
    IDENTIFIER@0..6 "module"
    QUALIFIED_NAME@6..22
      WHITESPACE@6..7 " "
      IDENTIFIER@7..10 "com"
      DOT@10..11 "."
      IDENTIFIER@11..18 "example"
      DOT@18..19 "."
      IDENTIFIER@19..22 "foo"
    MODULE_BODY@22..493
      WHITESPACE@22..23 " "
      L_BRACE@23..24 "{"
      REQUIRES_DIRECTIVE@24..59
        WHITESPACE@24..29 "\n    "
        IDENTIFIER@29..37 "requires"
        QUALIFIED_NAME@37..58
          WHITESPACE@37..38 " "
          IDENTIFIER@38..41 "com"
          DOT@41..42 "."
          IDENTIFIER@42..49 "example"
          DOT@49..50 "."
          IDENTIFIER@50..53 "foo"
          DOT@53..54 "."
          IDENTIFIER@54..58 "http"
        SEMICOLON@58..59 ";"
      REQUIRES_DIRECTIVE@59..86
        WHITESPACE@59..64 "\n    "
        IDENTIFIER@64..72 "requires"
        QUALIFIED_NAME@72..85
          WHITESPACE@72..73 " "
          IDENTIFIER@73..77 "java"
          DOT@77..78 "."
          IDENTIFIER@78..85 "logging"
        SEMICOLON@85..86 ";"
      REQUIRES_DIRECTIVE@86..136
        WHITESPACE@86..92 "\n\n    "
        IDENTIFIER@92..100 "requires"
        MODIFIER_LIST@100..111
          WHITESPACE@100..101 " "
          IDENTIFIER@101..111 "transitive"
        QUALIFIED_NAME@111..135
          WHITESPACE@111..112 " "
          IDENTIFIER@112..115 "com"
          DOT@115..116 "."
          IDENTIFIER@116..123 "example"
          DOT@123..124 "."
          IDENTIFIER@124..127 "foo"
          DOT@127..128 "."
          IDENTIFIER@128..135 "network"
        SEMICOLON@135..136 ";"
      EXPORTS_DIRECTIVE@136..170
        WHITESPACE@136..142 "\n\n    "
        IDENTIFIER@142..149 "exports"
        QUALIFIED_NAME@149..169
          WHITESPACE@149..150 " "
          IDENTIFIER@150..153 "com"
          DOT@153..154 "."
          IDENTIFIER@154..161 "example"
          DOT@161..162 "."
          IDENTIFIER@162..165 "foo"
          DOT@165..166 "."
          IDENTIFIER@166..169 "bar"
        SEMICOLON@169..170 ";"
      EXPORTS_DIRECTIVE@170..233
        WHITESPACE@170..175 "\n    "
        IDENTIFIER@175..182 "exports"
        QUALIFIED_NAME@182..207
          WHITESPACE@182..183 " "
          IDENTIFIER@183..186 "com"
          DOT@186..187 "."
          IDENTIFIER@187..194 "example"
          DOT@194..195 "."
          IDENTIFIER@195..198 "foo"
          DOT@198..199 "."
          IDENTIFIER@199..207 "internal"
        WHITESPACE@207..208 " "
        IDENTIFIER@208..210 "to"
        QUALIFIED_NAME@210..232
          WHITESPACE@210..211 " "
          IDENTIFIER@211..214 "com"
          DOT@214..215 "."
          IDENTIFIER@215..222 "example"
          DOT@222..223 "."
          IDENTIFIER@223..226 "foo"
          DOT@226..227 "."
          IDENTIFIER@227..232 "probe"
        SEMICOLON@232..233 ";"
      OPENS_DIRECTIVE@233..266
        WHITESPACE@233..239 "\n\n    "
        IDENTIFIER@239..244 "opens"
        QUALIFIED_NAME@244..265
          WHITESPACE@244..245 " "
          IDENTIFIER@245..248 "com"
          DOT@248..249 "."
          IDENTIFIER@249..256 "example"
          DOT@256..257 "."
          IDENTIFIER@257..260 "foo"
          DOT@260..261 "."
          IDENTIFIER@261..265 "quux"
        SEMICOLON@265..266 ";"
      OPENS_DIRECTIVE@266..390
        WHITESPACE@266..271 "\n    "
        IDENTIFIER@271..276 "opens"
        QUALIFIED_NAME@276..301
          WHITESPACE@276..277 " "
          IDENTIFIER@277..280 "com"
          DOT@280..281 "."
          IDENTIFIER@281..288 "example"
          DOT@288..289 "."
          IDENTIFIER@289..292 "foo"
          DOT@292..293 "."
          IDENTIFIER@293..301 "internal"
        WHITESPACE@301..302 " "
        IDENTIFIER@302..304 "to"
        QUALIFIED_NAME@304..328
          WHITESPACE@304..305 " "
          IDENTIFIER@305..308 "com"
          DOT@308..309 "."
          IDENTIFIER@309..316 "example"
          DOT@316..317 "."
          IDENTIFIER@317..320 "foo"
          DOT@320..321 "."
          IDENTIFIER@321..328 "network"
        COMMA@328..329 ","
        QUALIFIED_NAME@329..389
          WHITESPACE@329..368 "\n                     ..."
          IDENTIFIER@368..371 "com"
          DOT@371..372 "."
          IDENTIFIER@372..379 "example"
          DOT@379..380 "."
          IDENTIFIER@380..383 "foo"
          DOT@383..384 "."
          IDENTIFIER@384..389 "probe"
        SEMICOLON@389..390 ";"
      USES_DIRECTIVE@390..426
        WHITESPACE@390..396 "\n\n    "
        IDENTIFIER@396..400 "uses"
        QUALIFIED_NAME@400..425
          WHITESPACE@400..401 " "
          IDENTIFIER@401..404 "com"
          DOT@404..405 "."
          IDENTIFIER@405..412 "example"
          DOT@412..413 "."
          IDENTIFIER@413..416 "foo"
          DOT@416..417 "."
          IDENTIFIER@417..420 "spi"
          DOT@420..421 "."
          IDENTIFIER@421..425 "Intf"
        SEMICOLON@425..426 ";"
      PROVIDES_DIRECTIVE@426..491
        WHITESPACE@426..431 "\n    "
        IDENTIFIER@431..439 "provides"
        QUALIFIED_NAME@439..464
          WHITESPACE@439..440 " "
          IDENTIFIER@440..443 "com"
          DOT@443..444 "."
          IDENTIFIER@444..451 "example"
          DOT@451..452 "."
          IDENTIFIER@452..455 "foo"
          DOT@455..456 "."
          IDENTIFIER@456..459 "spi"
          DOT@459..460 "."
          IDENTIFIER@460..464 "Intf"
        WHITESPACE@464..465 " "
        IDENTIFIER@465..469 "with"
        QUALIFIED_NAME@469..490
          WHITESPACE@469..470 " "
          IDENTIFIER@470..473 "com"
          DOT@473..474 "."
          IDENTIFIER@474..481 "example"
          DOT@481..482 "."
          IDENTIFIER@482..485 "foo"
          DOT@485..486 "."
          IDENTIFIER@486..490 "Impl"
        SEMICOLON@490..491 ";"
      WHITESPACE@491..492 "\n"
      R_BRACE@492..493 "}"
  WHITESPACE@493..494 "\n"
